# rdma-filter

./: .gitignore  CMakeLists.txt  README.md  memo.md  temp.md
result/: out_dram_cf.csv  out_dram_ohbbf.csv
scripts/: list_machines.txt  test.py
scripts/temp/: authorized_keys
src/: CMakeLists.txt
src/common/: rdma_common.cpp  rdma_common.h  utils.cpp  utils.h
src/dram_bbf/: dram_bbf.h
src/dram_bf/: dram_bf.cpp
src/dram_cf/: dram_cf.h
src/rdma_bbf/: rdma_bbf.cpp  rdma_bbf.h
src/rdma_bf/: rdma_bf.cpp  rdma_bf.h
src/rdma_cf/: rdma_cf.cpp
src/rdma_ohbbf/: rdma_ohbbf.cpp  rdma_ohbbf.h
src/temp_bf/: bloomfilter.cpp  bloomfilter.h
test/: 0_rnic_check.cpp  0_test.cpp  1_dram.cpp  1_temp.cpp  2_cli.cpp  2_srv.cpp  3_cli_test.cpp  9_test.cpp  CMakeLists.txt
